# python_packing_notes

./: .gitignore  distutils操作.py  index.html  readme.md  setup.cfg  setup.py  包管理.md
LeroykTest/: .git_archival.txt  pyproject.toml  readme.md  setup.cfg
LeroykTest/src/: App.py  __init__.py
LeroykTest/src/LeroykTest/: App.py  __init__.py
LeroykTest/src/one/: one.py
LeroykTest/src/spam/: __init__.py
LeroykTest/src/two/: two.py
codeOptimize/: main.py
nextPackTools/: README.md  pyproject.toml
nextPackTools/.obsidian/: app.json  workspace.json
package/: __init__.py  module.py
其他配置文件读写/: config.ini  config.json  config.toml  config.yaml  ini.py  useYaml.py
