
# 官方推荐使用pyproject.toml在项目根目录中，一口气配置全部参数

# 系统构建
[build-system]
# 使用插件
requires = ["setuptools", "setuptools-scm"]
# requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# 配置工具
[tool.setuptools]
# 自动添加数据文件
include-package-data = true

# 配置插件
[tool.setuptools_scm]
# 设置版本自动更新
write_to = "src/_version.py"
# 默认版本模板
write_to_template = '__version__ = "{version}"'
# 版本风格
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

# 项目基础信息https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
# 项目名称
name = "LeroykTest"
# 版本，由于使用了setuptools_scm可以自动更新版本，如果配置，则会报错
# version = "1.0.0"

# 项目描述
description = "用来测试python打包"
# 完整自述文件readme.md or README.rst
readme = "readme.md"
# python版本要求
requires-python = ">=3.6"
# 作者信息
authors = [{ email = "bridieiybnf@gmail.com" }, { name = "LeroyK" }]
# 维护人员
maintainers = [{ name = "Brett Cannon", email = "brett@python.org" }]


# 遵守协议
license = { text = "MIT License" }
# 分类器https://pypi.org/classifiers/根据需求填写
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
]
# 忽略字段,会被彻底忽略，官方推荐安装setuptools_scm，则会忽略version这个字段
dynamic = ["version"]
# 关键字段,会被pypi展示
keywords = ["name", "authors", "urls"]
# 官方地址
urls = { Project-URL = "https://github.com/LeroyK111/python_packing_notes" }

# 必须依赖
dependencies = [
  "requests",
  'importlib-metadata; python_version>"3.6"',
  "PySimpleGUI",
]

# 可选依赖
[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack==1.1, ==1.3"]

# 更多网址
# [project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# repository = "https://github.com"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


# python脚本，可以直接在shell中执行LeroykTest从而调用func
# 写在__init__中的对象，不需要在加点LeroykTest.__init__
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[project.scripts]
LeroykTest = "function"

# PySimpleGUI专用
[project.gui-scripts]
spam-gui = "spam:main_gui"

# 插件语法：https://setuptools.pypa.io/en/latest/userguide/entry_point.html
# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
# 官方推荐使用pyproject.toml在项目根目录中，一口气配置全部参数

# 系统构建
[build-system]
# 使用插件
requires = ["setuptools", "setuptools-scm"]
# requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# 配置工具
[tool.setuptools]
# 自动添加数据文件
include-package-data = true

# 配置插件
[tool.setuptools_scm]
# 设置版本自动更新
write_to = "src/_version.py"
# 默认版本模板
write_to_template = '__version__ = "{version}"'
# 版本风格
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

# 项目基础信息https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
# 项目名称
name = "LeroykTest"
# 版本，由于使用了setuptools_scm可以自动更新版本，如果配置，则会报错
# version = "1.0.0"

# 项目描述
description = "用来测试python打包"
# 完整自述文件readme.md or README.rst
readme = "readme.md"
# python版本要求
requires-python = ">=3.6"
# 作者信息
authors = [{ email = "bridieiybnf@gmail.com" }, { name = "LeroyK" }]
# 维护人员
maintainers = [{ name = "Brett Cannon", email = "brett@python.org" }]


# 遵守协议
license = { text = "MIT License" }
# 分类器https://pypi.org/classifiers/根据需求填写
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
]
# 忽略字段,会被彻底忽略，官方推荐安装setuptools_scm，则会忽略version这个字段
dynamic = ["version"]
# 关键字段,会被pypi展示
keywords = ["name", "authors", "urls"]
# 官方地址
urls = { Project-URL = "https://github.com/LeroyK111/python_packing_notes" }

# 必须依赖
dependencies = [
  "requests",
  'importlib-metadata; python_version>"3.6"',
  "PySimpleGUI",
]

# 可选依赖
[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack==1.1, ==1.3"]

# 更多网址
# [project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# repository = "https://github.com"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


# python脚本，可以直接在shell中执行LeroykTest从而调用func
# 写在__init__中的对象，不需要在加点LeroykTest.__init__
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[project.scripts]
LeroykTest = "function"

# PySimpleGUI专用
[project.gui-scripts]
spam-gui = "spam:main_gui"

# 插件语法：https://setuptools.pypa.io/en/latest/userguide/entry_point.html
# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
# 官方推荐使用pyproject.toml在项目根目录中，一口气配置全部参数

# 系统构建
[build-system]
# 使用插件
requires = ["setuptools", "setuptools-scm"]
# requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# 配置工具
[tool.setuptools]
# 自动添加数据文件
include-package-data = true

# 配置插件
[tool.setuptools_scm]
# 设置版本自动更新
write_to = "src/_version.py"
# 默认版本模板
write_to_template = '__version__ = "{version}"'
# 版本风格
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

# 项目基础信息https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
# 项目名称
name = "LeroykTest"
# 版本，由于使用了setuptools_scm可以自动更新版本，如果配置，则会报错
# version = "1.0.0"

# 项目描述
description = "用来测试python打包"
# 完整自述文件readme.md or README.rst
readme = "readme.md"
# python版本要求
requires-python = ">=3.6"
# 作者信息
authors = [{ email = "bridieiybnf@gmail.com" }, { name = "LeroyK" }]
# 维护人员
maintainers = [{ name = "Brett Cannon", email = "brett@python.org" }]


# 遵守协议
license = { text = "MIT License" }
# 分类器https://pypi.org/classifiers/根据需求填写
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
]
# 忽略字段,会被彻底忽略，官方推荐安装setuptools_scm，则会忽略version这个字段
dynamic = ["version"]
# 关键字段,会被pypi展示
keywords = ["name", "authors", "urls"]
# 官方地址
urls = { Project-URL = "https://github.com/LeroyK111/python_packing_notes" }

# 必须依赖
dependencies = [
  "requests",
  'importlib-metadata; python_version>"3.6"',
  "PySimpleGUI",
]

# 可选依赖
[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack==1.1, ==1.3"]

# 更多网址
# [project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# repository = "https://github.com"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


# python脚本，可以直接在shell中执行LeroykTest从而调用func
# 写在__init__中的对象，不需要在加点LeroykTest.__init__
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[project.scripts]
LeroykTest = "function"

# PySimpleGUI专用
[project.gui-scripts]
spam-gui = "spam:main_gui"

# 插件语法：https://setuptools.pypa.io/en/latest/userguide/entry_point.html
# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
